disable wider frame in reference page

--- a/qmd_beamer-seahorse_after-body.tex
+++ b/qmd_beamer-seahorse_after-body.tex
@@ -17,8 +17,8 @@
     \begin{frame}[allowframebreaks]{References}
 		\bibliographytrue
         \def\bibfont{\footnotesize}
-		\Wider{
+		%\Wider{
 			\bibliography{refdb.bib}
-		}
+		%}
     \end{frame}
 \endgroup
