removed requirement of after-body.tex

--- a/qmd_beamer-seahorse_after-body.tex
+++ b/qmd_beamer-seahorse_after-body.tex
@@ -2,23 +2,15 @@
     % \centering \Huge Thank you.
 % \end{frame}
 
-\section*{Thank you.}
+% \section*{Thank you.}
 
-\appendix
+% \appendix
 
-% \begin{frame}[allowframebreaks]{References}
-    % \bibliographytrue
-    % \def\bibfont{\footnotesize}
-    % \bibliography{refdb.bib}
-% \end{frame}
-
-\begingroup
-    \renewcommand{\section}[2]{}%
-    \begin{frame}[allowframebreaks]{References}
+% \begingroup
+    % \renewcommand{\section}[2]{}%
+    % \begin{frame}[allowframebreaks]{References}
 		\bibliographytrue
-        \def\bibfont{\footnotesize}
-		%\Wider{
-			\bibliography{refdb.bib}
-		%}
-    \end{frame}
-\endgroup
+        % \def\bibfont{\footnotesize}
+		% \bibliography{refdb.bib}
+    % \end{frame}
+% \endgroup
