--- a/qmd_beamer-seahorse_after-body.tex
+++ b/qmd_beamer-seahorse_after-body.tex
@@ -9,7 +9,7 @@
 % \begingroup
     % \renewcommand{\section}[2]{}%
     % \begin{frame}[allowframebreaks]{References}
-		\bibliographytrue
+		% \bibliographytrue
         % \def\bibfont{\footnotesize}
 		% \bibliography{refdb.bib}
     % \end{frame}
