--- a/qmd_beamer-seahorse_metainfo.tex
+++ b/qmd_beamer-seahorse_metainfo.tex
@@ -1,3 +1,4 @@
 \AtBeginDocument{\title{Test doc}}
 \AtBeginDocument{\author[Shazid]{Md. Aminul Islam Shazid}}
+\AtBeginDocument{\institute{Starfleet Academy}}
 \AtBeginDocument{\date{17 May 2024}}
